feat: Add AppTitleBarLogo UserControl for modular UI
Introduces a new UserControl `AppTitleBarLogo` to encapsulate the logo and title elements.
Replaces the original elements in `MainWindow.xaml` for improved modularity and reusability.

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -13,6 +13,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="CustomControls\AppTitleBarLogo.xaml" />
     <None Remove="Pages\KSuiteUpgradeBar.xaml" />
   </ItemGroup>
 
@@ -74,6 +75,9 @@
     <Page Update="HomePage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="Pages\ActivityPage - Copy.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Pages\ErrorPage.xaml">
       <SubType>Designer</SubType>
     </Page>
@@ -85,6 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AnimatedElements\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="CustomControls\AppTitleBarLogo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="CustomControls\SyncErrorBar.xaml">
