feat: Introduce QuickAccess control and update UI layout
Updated MainWindow backdrop and restructured HomePage layout.
Removed old button handlers and added QuickAccess control for favorites, shared items, and trash.
Updated resource keys and added new SVG icons.

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -69,6 +69,9 @@
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <Page Update="CustomControls\QuickAccess.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="CustomControls\DriveIcon.xaml">
       <SubType>Designer</SubType>
     </Page>
