feat: Implement new sync controls and animations
- Updated `kDrive-Sync-LIGHT 1.json` with new animations.
- Enhanced `LottiePlayer.xaml` for smoother transitions.
- Rewrote `SyncStatusBar.xaml` to introduce a new design.
- Added `SyncStartPauseButton` control in `MainWindow.xaml`.
- Updated `ActivityPage.xaml` and `HomePage.xaml` to use new button.
- Introduced `Idle` sync status in `Types.cs` for better state representation.
- Updated application logic in `App.cs` for network checks and sync management.

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -129,7 +129,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="CustomControls\SyncStatusBar.xaml">
+    <Page Update="CustomControls\SyncStartPauseButton.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
