--- a/src/front/macOS/swiftgen.yml
+++ b/src/front/macOS/swiftgen.yml
@@ -15,9 +15,30 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 strings:
-  inputs: kDrive/Resources/Localizable/en.lproj
+  inputs: kDriveResources/Localizable/en.lproj
   outputs:
     - templateName: structured-swift5
-      output: kDrive/Resources/Generated/Strings+Generated.swift
+      output: kDriveResources/Generated/Strings+Generated.swift
       params:
         enumName: KDriveLocalizable
+        publicAccess: true
+
+xcassets:
+  inputs:
+    - kDriveResources/Images.xcassets
+  outputs:
+    - templateName: swift5
+      output: kDriveResources/Generated/Assets+Generated.swift
+      params:
+        enumName: KDriveResources
+        publicAccess: true
+
+xcassets:
+  inputs:
+    - kDriveResources/Colors.xcassets
+  outputs:
+    - templateName: swift5
+      output: kDriveResources/Generated/Colors+Generated.swift
+      params:
+        enumName: KDriveColors
+        publicAccess: true
