--- a/src/libcommon/CMakeLists.txt
+++ b/src/libcommon/CMakeLists.txt
@@ -23,6 +23,7 @@ add_definitions(-D_UNICODE)
 # Sources
 set(libcommon_SRCS
     comm.h
+    utility/cstypes.h
     utility/types.h utility/types.cpp
     utility/utility_base.h utility/utility.h utility/utility.cpp
     utility/filename.h utility/commonmacros.h utility/coveragemacros.h
