fix(linux-release-builds): adapts Github actions to the new release build scripts

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -19,6 +19,7 @@ runs:
         run: |
           if [[ "${{ inputs.release_build }}" == "true" ]]; then
             SCRIPT="${{ github.workspace }}/infomaniak-build-tools/linux/build-release.sh"
+            ARGS="-d ${{ github.workspace }}"
           else
             SCRIPT="${{ github.workspace }}/infomaniak-build-tools/linux/build-ci-amd64.sh"
             ARGS="-u -t release"
