--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -53,6 +53,7 @@ set(server_SRCS
     comm/guijobs/guijobfactory.h comm/guijobs/guijobfactory.cpp
     comm/guijobs/loginrequesttokenjob.h comm/guijobs/loginrequesttokenjob.cpp
     comm/guijobs/userdbidlistjob.h comm/guijobs/userdbidlistjob.cpp
+    comm/guijobs/userinfolistjob.h comm/guijobs/userinfolistjob.cpp
     comm/guijobs/signaluseraddedjob.h comm/guijobs/signaluseraddedjob.cpp
     comm/guijobs/signaluserupdatedjob.h comm/guijobs/signaluserupdatedjob.cpp
     migration/migrationparams.h migration/migrationparams.cpp
