--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -18,8 +18,7 @@ runs:
         id: build
         run: |
           if [[ "${{ inputs.release_build }}" == "true" ]]; then
-            SCRIPT="${{ github.workspace }}/infomaniak-build-tools/linux/build-release.sh"
-            ARGS="-d ${{ github.workspace }}"
+            SCRIPT="${{ github.workspace }}/infomaniak-build-tools/linux/archive/build-release-amd64.sh"
           else
             SCRIPT="${{ github.workspace }}/infomaniak-build-tools/linux/build-ci-amd64.sh"
             ARGS="-u -t release"
@@ -32,7 +31,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-release-artifacts-appimage-amd64
-          path: ${{ github.workspace }}/build-linux-amd64/install/kDrive-*-amd64.AppImage # kDrive-<full_version>-amd64.AppImage
+          path: ${{ github.workspace }}/build-linux/install/kDrive-*-amd64.AppImage # kDrive-<full_version>-amd64.AppImage
           retention-days: 1
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'true' }}
 
@@ -46,21 +45,21 @@ runs:
       - name: Create sentry server artifacts
         if: ${{ steps.build.outcome == 'success' &&  inputs.release_build == 'true' }}
         run: |
-          DBG_FILE="${{ github.workspace }}/build-linux-amd64/kDrive.dbg"
+          DBG_FILE="${{ github.workspace }}/build-linux/kDrive.dbg"
           ./sentry-cli debug-files bundle-sources "$DBG_FILE"
-          mkdir "${{ github.workspace }}/build-linux-amd64/sentry-server-artifacts"
-          mv "${{ github.workspace }}/build-linux-amd64/kDrive.src.zip" "${{ github.workspace }}/build-linux-amd64/sentry-server-artifacts"
-          mv "$DBG_FILE" "${{ github.workspace }}/build-linux-amd64/sentry-server-artifacts"
+          mkdir "${{ github.workspace }}/build-linux/sentry-server-artifacts"
+          mv "${{ github.workspace }}/build-linux/kDrive.src.zip" "${{ github.workspace }}/build-linux/sentry-server-artifacts"
+          mv "$DBG_FILE" "${{ github.workspace }}/build-linux/sentry-server-artifacts"
         shell: bash
 
       - name: Create sentry client artifacts
         if: ${{ steps.build.outcome == 'success' &&  inputs.release_build == 'true' }}
         run: |
-          DBG_FILE="${{ github.workspace }}/build-linux-amd64/kDrive_client.dbg"
+          DBG_FILE="${{ github.workspace }}/build-linux/kDrive_client.dbg"
           ./sentry-cli debug-files bundle-sources "$DBG_FILE"
-          mkdir "${{ github.workspace }}/build-linux-amd64/sentry-client-artifacts"
-          mv "${{ github.workspace }}/build-linux-amd64/kDrive_client.src.zip" "${{ github.workspace }}/build-linux-amd64/sentry-client-artifacts"
-          mv "$DBG_FILE" "${{ github.workspace }}/build-linux-amd64/sentry-client-artifacts"
+          mkdir "${{ github.workspace }}/build-linux/sentry-client-artifacts"
+          mv "${{ github.workspace }}/build-linux/kDrive_client.src.zip" "${{ github.workspace }}/build-linux/sentry-client-artifacts"
+          mv "$DBG_FILE" "${{ github.workspace }}/build-linux/sentry-client-artifacts"
         shell: bash
 
       - name: Upload sentry server artifacts
@@ -68,7 +67,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-release-artifacts-server-debug-amd64
-          path: ${{ github.workspace }}/build-linux-amd64/sentry-server-artifacts
+          path: ${{ github.workspace }}/build-linux/sentry-server-artifacts
           retention-days: 1
           compression-level: 0
 
@@ -77,7 +76,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-release-artifacts-client-debug-amd64
-          path: ${{ github.workspace }}/build-linux-amd64/sentry-client-artifacts
+          path: ${{ github.workspace }}/build-linux/sentry-client-artifacts
           retention-days: 1
           compression-level: 0
 
@@ -116,7 +115,7 @@ runs:
       - name: Fetch Conan dependencies
         run: |
           echo "Sourcing conanrun.sh to get LD_LIBRARY_PATH..."
-          source $(find "${{ github.workspace }}/build-linux-amd64" -name conanrun.sh | head -n 1)
+          source $(find "${{ github.workspace }}/build-linux" -name conanrun.sh | head -n 1)
           echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
           IFS=':' read -ra dirs <<< "$LD_LIBRARY_PATH"
           for dir in "${dirs[@]}"; do
@@ -137,7 +136,7 @@ runs:
       - name: Fetch kDrive dependencies (.lst)
         run: | 
           mkdir uncached_dependencies
-          cp ${{ github.workspace }}/build-linux-amd64/build/bin/sync-exclude.lst ./uncached_dependencies/
+          cp ${{ github.workspace }}/build-linux/build/bin/sync-exclude.lst ./uncached_dependencies/
         shell: bash
         if: steps.build.outcome == 'success'
 
@@ -163,7 +162,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-kDrive_test_common
-          path: ${{ github.workspace }}/build-linux-amd64/build/bin/kDrive_test_common
+          path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_common
           retention-days: 1
           compression-level: 0
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
@@ -172,7 +171,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-kDrive_test_common_server
-          path: ${{ github.workspace }}/build-linux-amd64/build/bin/kDrive_test_common_server
+          path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_common_server
           retention-days: 1
           compression-level: 0
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
@@ -181,7 +180,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-kDrive_test_server
-          path: ${{ github.workspace }}/build-linux-amd64/build/bin/kDrive_test_server
+          path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_server
           retention-days: 1
           compression-level: 0
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
@@ -190,7 +189,7 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-kDrive_test_syncengine
-          path: ${{ github.workspace }}/build-linux-amd64/build/bin/kDrive_test_syncengine
+          path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_syncengine
           retention-days: 1
           compression-level: 0
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
@@ -199,11 +198,11 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-kDrive_test_parms
-          path: ${{ github.workspace }}/build-linux-amd64/build/bin/kDrive_test_parms
+          path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_parms
           retention-days: 1
           compression-level: 0
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Clean-up generated code
-        run : rm -rf build-linux-amd64
+        run : rm -rf build-linux
         shell: bash
